# leuwi-panjang

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/leuwi-config/: Cargo.toml
crates/leuwi-config/src/: lib.rs  theme.rs
crates/leuwi-crypto/: Cargo.toml
crates/leuwi-crypto/src/: lib.rs
crates/leuwi-plugin-host/: Cargo.toml
crates/leuwi-plugin-host/src/: lib.rs
crates/leuwi-plugin-sdk/: Cargo.toml
crates/leuwi-plugin-sdk/src/: lib.rs
crates/leuwi-pty/: Cargo.toml
crates/leuwi-pty/src/: lib.rs
crates/leuwi-renderer/: Cargo.toml
crates/leuwi-renderer/src/: lib.rs
crates/leuwi-search/: Cargo.toml
crates/leuwi-search/src/: lib.rs
crates/leuwi-shell-integration/: Cargo.toml
crates/leuwi-shell-integration/src/: lib.rs
crates/leuwi-ssh/: Cargo.toml
crates/leuwi-ssh/src/: lib.rs
crates/leuwi-suggestions/: Cargo.toml
crates/leuwi-suggestions/src/: lib.rs
crates/leuwi-terminal/: Cargo.toml
crates/leuwi-terminal/src/: cell.rs  grid.rs  lib.rs  parser.rs  session.rs
crates/leuwi-ui/: Cargo.toml
crates/leuwi-ui/src/: app.rs  lib.rs  menu.rs  settings_panel.rs  tab_bar.rs  tab_manager.rs  terminal_pane.rs  terminal_view.rs
crates/leuwi-wireguard/: Cargo.toml
crates/leuwi-wireguard/src/: lib.rs
docs/: README.md
docs/architecture/: 01-master-plan.md  02-implementation-roadmap.md
docs/features/: 01-core-features.md  02-plugin-system.md  03-ai-integration.md
docs/guides/: 01-getting-started.md  02-keymaps.md  03-configuration.md
docs/mobile/: 01-mobile-app.md
docs/research/: 01-gnome-terminal-analysis.md  02-kitty-analysis.md  03-iterm2-analysis.md  04-rust-terminal-ecosystem.md  05-nvim-lightweight-ide.md  06-terminal-comparison.md
install/: install-mac.sh  install-windows.ps1  install.sh
shell-integration/: leuwi-prompt.fish  leuwi-prompt.zsh
src/: main.rs
tests/: terminal_grid_test.rs
