[package]
name = "leuwi-panjang"
version = "0.1.0-dev.10"
edition = "2021"

[dependencies]
makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "main" }
portable-pty = "0.8"
arboard = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
