[package]
name = "leuwi-plugin-host"
description = "WASM plugin runtime host (wasmtime)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wasmtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
