[package]
name = "leuwi-pty"
description = "PTY management for Leuwi Panjang terminal"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
portable-pty = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
