[package]
name = "leuwi-ssh"
description = "SSH client for Leuwi Panjang (mobile primary)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
russh = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
