[package]
name = "leuwi-ui"
description = "Makepad UI components: tabs, splits, status bar, settings"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
leuwi-terminal = { workspace = true }
leuwi-renderer = { workspace = true }
leuwi-pty = { workspace = true }
leuwi-config = { workspace = true }
makepad-widgets = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
arboard = { workspace = true }
