[package]
name = "leuwi-wireguard"
description = "Embedded WireGuard (boringtun) with zero-config pairing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
boringtun = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
